no chromedriver support for polymer testing

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   </head>
   <body ng-controller="appCtrl">
     <div id="applicationContainer">
-      some content
-      <core-scaffold>
-        <core-header-panel navigation flex mode="seamed">
-          <core-toolbar>Application</core-toolbar>
+      <core-scaffold id="groupScaffold">
+        <core-header-panel navigation flex mode="seemed">
+          <core-toolbar>Groups</core-toolbar>
           <core-menu theme="core-light-theme">
             <core-item icon="settings" label="item1"></core-item>
             <core-item icon="settings" label="item2"></core-item>
@@ -26,11 +25,10 @@
         <div>Content goes here...</div>
       </core-scaffold>
     </div>
-    <script>
-      var soProTestsReady = false;
-      document.addEventListener("polymer-ready", function () {
-        soProTestsReady = true;
-      });
-    </script>
   </body>
+  <script>
+    document.addEventListener('polymer-ready', function () {
+      document.getElementById('groupScaffold').closeDrawer();
+    });
+  </script>
 </html>
