Small tweaks. no sopro_components yet.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/angular-route.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
     
+    <link rel="import" href="bower_components/font-roboto/roboto.html">
     <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-menu/core-menu.html">
