Add first modified components

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/app.js" type="text/javascript"></script>
     
     <link rel="import" href="bower_components/font-roboto/roboto.html">
-    <link rel="import" href="bower_components/core-scaffold/core-scaffold.html">
+    <link rel="import" href="sopro_components/core-scaffold/core-scaffold.html">
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-menu/core-menu.html">
     <link rel="import" href="bower_components/core-item/core-item.html">
@@ -17,7 +17,7 @@
     <div id="applicationContainer">
       <core-scaffold id="groupScaffold" narrow="true">
         <core-header-panel navigation flex mode="seamed">
-          <core-toolbar>Groups</core-toolbar>
+          <core-toolbar hidden></core-toolbar>
           <core-menu theme="core-light-theme">
             <core-item icon="settings" label="item1"></core-item>
             <core-item icon="settings" label="item2"></core-item>
