--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-menu/core-menu.html">
     <link rel="import" href="bower_components/core-item/core-item.html">
+    <link rel="import" href="sopro_components/sopro-generic-card/sopro-generic-card.html">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
   <body ng-controller="appCtrl">
@@ -30,7 +31,9 @@
           <core-icon-button id="listButton" icon="view-stream"></core-icon-button>
           <core-icon-button id="gridButton" icon="view-quilt"></core-icon-button>
         </div>
-        <div>Content goes here...</div>
+        <div layout vertical center>
+          <sopro-generic-card>Some card stuff...</sopro-generic-card>
+        </div>
       </core-scaffold>
     </div>
   </body>
