--- a/sopro_components/sopro-card/sopro-card.html
+++ b/sopro_components/sopro-card/sopro-card.html
@@ -1,4 +1,8 @@
-<polymer-element name="sopro-generic-card" attributes="">
+<link rel="import" href="bower_components/polymer/polymer.html">
+
+<polymer-element 
+name="sopro-generic-card" 
+attributes="">
   <template>
     <style>
     :host {
@@ -19,12 +23,6 @@
       font-size: 1.8rem;
       font-weight: 300;
     }
-    polyfill-next-selector { content: '.card-header img'; }
-    .card-header ::content img {
-      width: 70px;
-      border-radius: 50%;
-      margin: 10px;
-    }
     </style>
     <div class="card-header" layout horizontal center>
       <content select="h2"></content>
@@ -32,6 +30,6 @@
     <content></content>
   </template>
   <script>
-  Polymer({});
+    Polymer({});
   </script>
 </polymer-element>
