--- a/sopro_components/sopro-card/sopro-card.html
+++ b/sopro_components/sopro-card/sopro-card.html
@@ -1,7 +1,7 @@
-<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <polymer-element 
-name="sopro-generic-card" 
+name="sopro-card" 
 attributes="">
   <template>
     <style>
