--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     
     <link rel="import" href="bower_components/font-roboto/roboto.html">
     <link rel="import" href="sopro_components/core-scaffold/core-scaffold.html">
+    <link rel="import" href="sopro_components/group-manager/group-card-titlebar.html">
     <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
     <link rel="import" href="bower_components/core-menu/core-menu.html">
     <link rel="import" href="bower_components/core-item/core-item.html">
     <link rel="import" href="sopro_components/sopro-card/sopro-card.html">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
   </head>
-  <body ng-controller="appCtrl">
+  <body unresolved ng-controller="appCtrl">
     <div id="applicationContainer">
       <core-scaffold id="groupScaffold" narrow="true">
         <core-header-panel navigation flex mode="seamed">
@@ -32,6 +33,8 @@
           <core-icon-button id="gridButton" icon="view-quilt"></core-icon-button>
         </div>
         <div layout vertical center>
+          <group-card-titlebar>
+          </group-card-titlebar>
           <sopro-card>
           <h2>A Card Title</h2>
           Some card stuff...
@@ -43,6 +46,9 @@
   <script>
     document.addEventListener('polymer-ready', function () {
       document.getElementById('groupScaffold').closeDrawer();
+    });
+    document.addEventListener('group-card-create', function () {
+      console.log("core-scaffold heard event group-card-create from some other element");
     });
   </script>
 </html>
