More appropriate icon

--- a/sopro_components/group-manager/group-card-titlebar.html
+++ b/sopro_components/group-manager/group-card-titlebar.html
@@ -65,7 +65,7 @@ attributes="editing title"
       > </titlebar-input>
       <core-icon-button 
         id="titleButton"
-        icon="save" 
+        icon="arrow-forward" 
         on-click="{{fireCreate}}"
         hidden?="{{!editing && !title}}"
         tabindex="2"
