--- a/sopro_components/core-scaffold/core-scaffold.html
+++ b/sopro_components/core-scaffold/core-scaffold.html
@@ -47,7 +47,7 @@ To have the content fits to the main area, use `fit` attribute.
 <link rel="import" href="../../bower_components/core-toolbar/core-toolbar.html">
 <link rel="import" href="../core-drawer-panel/core-drawer-panel.html">
 <link rel="import" href="../../bower_components/core-header-panel/core-header-panel.html">
-<link rel="import" href="../../bower_components/core-icon-button/core-icon-button.html">
+<link rel="import" href="../sopro-icon-button/sopro-icon-button.html">
 
 <polymer-element name="core-scaffold">
 <template>
@@ -84,7 +84,12 @@ To have the content fits to the main area, use `fit` attribute.
     <core-header-panel main mode="{{mode}}">
 
       <core-toolbar>
-        <core-icon-button id="menuButton" icon="menu" on-tap="{{togglePanel}}"></core-icon-button>
+        <sopro-icon-button 
+        id="menuButton" 
+        icon="menu" 
+        tabindex="0"
+        on-click="{{togglePanel}}"
+        ></sopro-icon-button>
         <content select="[tool]"></content>
       </core-toolbar>
       
