--- a/sopro_components/group-manager/titlebar-input.html
+++ b/sopro_components/group-manager/titlebar-input.html
@@ -55,7 +55,10 @@ the focused and invalid states.
 
 </core-style>
 
-<polymer-element name="titlebar-input" extends="core-input" attributes="label floatingLabel maxRows error" on-down="{{downAction}}" on-up="{{upAction}}">
+<polymer-element name="titlebar-input" extends="core-input" attributes="label
+floatingLabel maxRows error" on-down="{{downAction}}" on-up="{{upAction}}"
+>
+<!-- on-focus="{{inputFocusAction}}"-->
 
   <template>
 
@@ -373,7 +376,7 @@ the focused and invalid states.
         }
       },
 
-      keydownAction: function() {
+      keydownAction: function(e) {
         this.super();
 
         // more type = number hacks. see core-input for more info
