--- a/sopro_components/group-manager/group-card.html
+++ b/sopro_components/group-manager/group-card.html
@@ -1,47 +1,16 @@
-<link rel="import"
-  href="../../bower_components/core-icons/core-icons.html">
-<link rel="import"
-  href="../../bower_components/paper-shadow/paper-shadow.html">
-<link rel="import"
-  href="../sopro-icon-button/sopro-icon-button.html">
-<link rel="import"
-  href="../sopro-card/sopro-card.html">
-
-
-<!-- 
-Declare a <polymer-element name="tag-name" attributes="space separated attributes">
-tag-name MUST have at least one dash.
-attributes data bind the HTML tag attributes to the DOM properties of the element.
-
-If you two way data binding, (where changing the property also changes the attribute), 
-use 'reflect'.
-See http://www.polymer-project.org/docs/start/creatingelements.html
-and http://www.polymer-project.org/docs/polymer/polymer.html
--->
+<link rel="import" href="../../bower_components/core-icons/core-icons.html">
+<link rel="import" href="../../bower_components/paper-shadow/paper-shadow.html">
+<link rel="import" href="../sopro-icon-button/sopro-icon-button.html">
+<link rel="import" href="../sopro-card/sopro-card.html">
 
 <polymer-element 
 name="group-card" 
 attributes="title editing z"
 extends="sopro-card"
 >
-  <!-- 
-  Declare a <template><div#ShadowDomDivs></div></template> tree
-  You can use {{dataBinding}} syntax in attributes and text nodes, maybe elsewhere?
-  -->
   <template >
     <shadow></shadow>
     <style>
-      /* Hide editor elements without .editing 
-      #card titlebar-input, #card sopro-icon-button{
-        display: none;
-      }
-      #card.editing h2{
-        display: none;
-      }
-      #card.editing titlebar-input, #card.editing sopro-icon-button{
-        display: block;
-      }
-      */
       :host {
       }
       :host[editing="true"] {
@@ -72,7 +41,6 @@ extends="sopro-card"
     </style>
     <div id="tabCatcher1" tabindex="0"></div>
     <div 
-    on-click="{{onCardClicked}}"
     on-focus="{{onFocuses}}"
     on-blur="{{onBlurs}}"
     id="card" 
@@ -108,42 +76,48 @@ extends="sopro-card"
     <paper-shadow z="{{z}}" animated="true"></paper-shadow>
   </template>
 
-  <!-- 
-  Call Polymer(tagName, options) to register this element and set up the
-  functionality you define with data binding and functions.
-  See here for reference:
-  http://www.polymer-project.org/docs/polymer/polymer.html
-  -->
   <script>
     Polymer('group-card', {
       publish: { // If you want to expose properties as tag attributes
         title: '',
         editing: {value: "false", reflect: true},
         z: {value: "0", reflect: true},
+        groupMembers: [],
       },
-      groupMembers: [],
       onCardClicked: function(e){
-        console.log('onCardClicked');
+        // The default action of clicking the card is to start editing it. 
+        // We have to identify whether the click was on the save button or the
+        // input field. In those cases, we ignore the click. (The save button
+        // triggers stopEditing on its own.)
+
+        //console.log('onCardClicked');
+        //console.log(e);
+
+        // Get the currently focused element
         try{
           var aId = document.activeElement.id;
         } catch (e){
           var aId = null;
         };
-        console.log(aId);
+        console.log(aId, e.explicitOriginalTarget.id);
         /* Pressing enter on children elements should not click the card. */
         if(e.explicitOriginalTarget.id == "saveCard"
+        || aId == "saveCard"
         || aId == "input"
         || aId == "cardTitle"){
+          //console.log('Not triggering click on group-card from child element click')
           return;
         } else {
           this.startEditing();
         };
       },
       onBlurs: function(e){
-
-        //console.log(e);
         //this.stopEditing();
-        this.z = "0";
+        if(this.editing == "true"){
+          this.z = "1";
+        } else {
+          this.z = "0";
+        };
         this.$.tabCatcher1.setAttribute("tabindex", "0");
         this.$.tabCatcher2.setAttribute("tabindex", "0");
       },
@@ -156,12 +130,6 @@ extends="sopro-card"
         } else {
           this.z = "1";
         };
-      },
-      onCardFocused: function(e){
-        console.log('onCardFocused');
-        this.$.tabCatcher1.setAttribute("tabindex", "-1");
-        this.$.tabCatcher2.setAttribute("tabindex", "-1");
-        this.z = "1";
       },
       startEditing: function(){
         console.log('startEditing');
@@ -178,43 +146,64 @@ extends="sopro-card"
         this.$.card.focus();
       },
       attached: function(){
-        /* Send click if you hit enter or space while the card is focused: */
+        // Store a reference to the group-card element for use in callbacks:
         var that = this;
-        // Check for enter and use Capture.
-        // This makes keypress events on #card
+
+        // Pass clicks on the group-card to its click handler:
+        this.addEventListener('click', this.onCardClicked, true);
+        //this.addEventListener('tap', this.onCardClicked, true);
+
+        // Bind keys on group card:
         this.addEventListener('keypress', function(e){
+          // Do nothing with keypresses on save button; they have their own handler
+          if( e.explicitOriginalTarget.id === 'saveCard' ){
+            return;
+          };
+
+          // Figure out what has focus when the key was pressed:
           try{
             var aId = document.activeElement.id;
             }catch(e){
             var aId = "";
           };
-          if(e.which === 13 || e.which === 32){
-            // If Enter within cardTitle input: 
-            if(aId === 'cardTitle' || aId === 'input' || aId === 'saveCard' ){
-              that.stopEditing();
-              return;
-            };
-            // If Enter on card itself 
-            //console.log('Clicking card');
-            //that.$.card.click();
-            that.startEditing();
-          };
-          if(e.which === 27){
-            console.log('ESC');
-            that.stopEditing();
-          };
-        }, true);
-        // Check for enter and use Bubble.
-        // This hears child keypress events on #cardTitle
-        this.addEventListener('keypress', function(e){
-          if(e.which === 27){
-            console.log('ESC');
-            that.stopEditing();
-          };
-        }, false);
 
-        // If tab catchers ever get focus, set focus to card (which will disable
-        // the tab catchers with tabindex='-1'
+          // Bind Enter, Space, Escape keys appropriately:
+          if(e.which === 13){ // Enter
+            if(aId === 'cardTitle' || aId === 'input'){
+              that.stopEditing();
+              return; // Enter on title field means commit
+            };
+            that.startEditing(); // Enter on card itself means edit
+          };
+          
+          if(e.which === 32){
+            if(aId === 'cardTitle' || aId === 'input'){
+              return; // Space on title field is meaningless
+            };
+            that.startEditing(); // Space on card itself means edit
+          };
+
+          // Firefox doesn't let you use e.which for Escape:
+          var code = e.keyCode ? e.keyCode : e.which;
+          if(code === 27){ // Escape
+            that.stopEditing();
+          };
+
+        }, true);
+
+
+        // There are a pair of tabCatcher divs around #card.
+
+        // When #card, #cardTitle, or #cardSave gets focus, 
+        // we set tabCatchers[tabindex='-1']. This way, tabbing away
+        // from #card never goes to its own tabCatchers.
+
+        // When the card elements lose focus, we set tabCatchers[tabindex='0'].
+        // So, from outside a card, you can tab onto its tab catchers. When you
+        // do, the below listeners redirect the focus onto #card, (which then
+        // disables the tab catchers again.)
+
+        // See .onBlurs and .onFocuses.
         this.$.tabCatcher1.addEventListener('focus',function(){
           that.$.card.focus();
         })
