--- a/sopro_components/sopro-icon-button/sopro-icon-button.html
+++ b/sopro_components/sopro-icon-button/sopro-icon-button.html
@@ -76,6 +76,7 @@ how to use a custom icon set.
           if(e.which === 13 || e.which === 32){
             that.click();
           };
+          e.stopPropagation();
         });
       },
 
